--- a/.hintrc
+++ b/.hintrc
@@ -9,7 +9,14 @@
         "label": "off"
       }
     ],
-    "button-type": "off"
+    "button-type": "off",
+    "no-inline-styles": "off",
+    "axe/name-role-value": [
+      "default",
+      {
+        "link-name": "off"
+      }
+    ]
   },
   "browserslist": [
     "defaults",
